# tflite-micro-opencv

./: CMakeLists.txt  README.md
tflm-tree/examples/hello_world/: CMakeLists.txt
tflm-tree/examples/micro_speech/: CMakeLists.txt
tflm-tree/examples/person_detection/: CMakeLists.txt  detection_responder.cc  image_provider.cc  image_provider.h  main.cc  main_functions.cc  main_functions.h
